objects/Training_Event_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Event_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <formula>Training_Event__r.Training_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Training_Event_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Event Account</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Training Account Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>